--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -38,7 +38,7 @@
                 /src//images/tablet/plateTablet.png    1x,
                 /src//images/tablet/plateTablet@2x.png 2x
             " media="(min-width: 768px)" width="152" />
-                <img class="hero__plate-img" src="/src/images/desktop/plateDesktop.png" title="ice-cream" alt="ice-cream" />
+                <img class="hero__plate-img" src="/src/images/tablet/x2/plateTablet@2x.png" title="ice-cream" alt="ice-cream" />
             </picture>
             <div class="hero__ad">
                 <p class="hero__after-title">
@@ -47,7 +47,7 @@
                 </p>
                 <button class="hero__link-btn" type="button">
                     <svg class="hero__icon" width="8" height="8">
-                        <use href="/src/icons.svg"></use>
+                        <use href="/src/images/icons.svg"></use>
                     </svg>
                 </button>
             </div>
@@ -71,7 +71,7 @@
                 /src/images/mobile/iceCreamMobile.png    1x,
                 /src/images/mobile/iceCreamMobile@2x.png 2x
             " media="(max-width: 479px)" width="247" />
-                <img src="/src/images/desktop/iceCreamDesktop.png" alt="ice-cream" />
+                <img src="/src/images/mobile/x2/iceCreamMobile@2x.png" alt="ice-cream" />
             </picture>
         </div>
     </div>
