--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -8,6 +8,8 @@
 /**/
 @import './vars/globals';
 @import './vars/mixins';
+
+@import './components/header';
 @import './components/contacts';
 @import './components/products';
 @import './components/about';
